Merged from branch-3-7.
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@1056 7d736ef5-cfd4-0310-9c9a-b52d5c14b761